--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <!-- Page Content-->
         <div class="container-fluid p-0">
             <!-- About-->
-            <section class="resume-section reveal" id="about">
+            <section class="resume-section " id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
                         Stephanie
