--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
 					<p class="mb-0">Throughout my career, I want to make it a priority to travel the world as much as possible. I enjoy visiting different countries to see the way different people live, to try new dishes, and to appreciate the world around me to the max. </p>
-                    <p>Apart from my passion for coding, I enjoy most of my time being active, painting, and reading. I spend a large amount of my free time at the gym lifting weights and in yoga classes. I make it a priority of mine to get my body moving atleast once a day because staying healthy and fit is  my most important goal in life </p>
+                    <p>Apart from my passion for coding, I enjoy most of my time being active, painting, and reading. I spend a large amount of my free time at the gym lifting weights and in yoga classes. I make it a priority of mine to get my body moving atleast once a day because staying healthy and fit is  my most important goal in life.</p>
                     
 					
                 </div>
