jp morgan update

--- a/index.html
+++ b/index.html
@@ -68,9 +68,10 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Software Engineer Intern</h3>
                             <div class="subheading mb-3">JP Morgan Chase & Co.</div>
-                            <p>• Develop and implement web applications that give clients more control over their experience. <br />
-							• Lead frontend development in React.js for multiple web applications <br />
-							• Implemented backend using Java and Spring Boot
+                            <p>• Lead a frontend development team using React.js which included weekly meetings with product owner, making UI/UX decisions, as well as reviewing team’s code to provide additional perspectives.<br />
+								• Develop and implement from scratch a full-stack web application with login functionality, multiple dashboards of information, as well as many features allowing users to make changes to large sets of data seamlessly. <br />
+								• Adapt to weekly new application expectations made by product owner including changes in number of dashboards, data, as well as overall UI/UX design.<br />
+
 </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">June 2022 - August 2022</span></div>
