--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
             <section class="resume-section reveal" id="experience">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Experience</h2>
+					
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Software Engineer Intern</h3>
@@ -84,7 +85,8 @@
 							• Lead cross functional teams, roadmap, vision, and design for the web application. This includes implementing scrum by holding daily standups and planning sprints. <br />
 							• Planned and coordinated 100% of aspects for the project from beginning up until delivery. <br />
 							• Upheld wireframe and design using Figma to portray stories as well as overall design of the web application. 
-</p>
+							</p>
+							<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="1000" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FXtrGYuOeGGDTXPRaoqnyPl%2FUser-View%3Fnode-id%3D0%253A1" allowfullscreen></iframe>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">January 2022 - May 2022</span></div>
                     </div>
