--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         San Antonio, TX ·
                         <a href="mailto:name@email.com">stephanie.younes@yahoo.com</a>
                     </div>
-                    <p class="lead mb-5">I am a computer science student and a passionate self starter eager to keep learning about technology. As a senior, I am looking for opportunities in software engineering or product management where I can utilize my skills and experience for the better and that helps me grow in my path in technology.</p>
+                    <p class="lead mb-5">I am a software engineer and a passionate self starter eager to keep learning about technology. I am looking for opportunities in software engineering or product management where I can utilize my skills and experience for the better and that helps me grow in my path in technology.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/stephanieyounes/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/stephanieyounes" target="_blank"><i class="fab fa-github"></i></a>
@@ -98,6 +98,15 @@
                     <h2 class="mb-5">Experience</h2>
 					
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+			    <div class="flex-grow-1">
+                            <h3 class="mb-0">Software Engineer</h3>
+                            <div class="subheading mb-3">Frost Bank</div>
+                            <p>• Work with AngularJS and Angular on a daily basis including new features, tech upgrades, and bug fixes on two web application, one client facing and one internal.<br />
+				• Working with Quality Assurance Engineers to insurecode quality, resilience, and good design. <br />
+								
+
+</p>
+                        </div>
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Software Engineer Intern</h3>
                             <div class="subheading mb-3">JP Morgan Chase & Co.</div>
